[tool.poetry]
name = "repl_python3_Mossy-The-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.8.7"
discord = "^1.0.1"
flask = "^1.1.2"
lavalink = "^3.1.2"
praw = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
